Added colab link for notebooks and rewrite dataset info

--- a/docs/source/_static/css/custom.css
+++ b/docs/source/_static/css/custom.css
@@ -5,6 +5,10 @@
     background-size: 100% 100%;
 }
 
+.pytorch-colab {
+    background-image: url("../images/logo-colab.svg");
+}
+
 .pytorch-github {
     background-image: url("../images/logo-github.svg");
 }
@@ -17,7 +21,7 @@
     display: block;
 }
 
-#github-view-link {
+#google-colab-link, #github-view-link {
     padding-bottom: 0.625rem;
     display: flex;
 }
